# netbox-data-import-plugin

./: .envrc.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  index.html  mkdocs.yml  netbox-plugin.yaml  pyproject.toml  sitemap.xml
.devcontainer/: .env.example  devcontainer.json  docker-compose.yml
.devcontainer/config/: codespaces-configuration.py  extra-configuration.py.example  extra-plugins.py.example  plugin-config.py.example
.devcontainer/scripts/: diagnose.sh  load-aliases.sh  load-sample-data.py  process-helpers.sh  setup.sh  start-netbox.sh  test-e2e-preview.py  test-e2e.py  welcome.sh
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/PULL_REQUEST_TEMPLATE/: code.md  contrib.md
.github/workflows/: codeql.yml  coverage-badge.yaml  lint-format.yaml  mkdocs.yaml  publish-pypi.yaml  release.yaml  test-netbox-main.yaml  test.yaml
changelog/: index.html
configuration/: index.html
contributing/: index.html
coverage/: badge.json  class_index.html  function_index.html  index.html  status.json  z_519fb71009c7b66c___init___py.html  z_519fb71009c7b66c_engine_py.html  z_519fb71009c7b66c_filters_py.html  z_519fb71009c7b66c_forms_py.html  z_519fb71009c7b66c_jobs_py.html  z_519fb71009c7b66c_models_py.html  z_519fb71009c7b66c_navigation_py.html  z_519fb71009c7b66c_signals_py.html  z_519fb71009c7b66c_tables_py.html  z_519fb71009c7b66c_template_content_py.html  z_519fb71009c7b66c_urls_py.html  z_519fb71009c7b66c_utils_py.html  z_519fb71009c7b66c_views_py.html  z_bceb1d9e84800896___init___py.html  z_bceb1d9e84800896_serializers_py.html  z_bceb1d9e84800896_urls_py.html  z_bceb1d9e84800896_views_py.html
docs/: changelog.md  configuration.md  contributing.md  index.md  installation.md
docs/superpowers/plans/: 2026-05-03-per-row-sync.md  2026-05-04-device-unlink-serial-warning.md  2026-05-06-multi-column-merge-preview-fixes.md
docs/superpowers/specs/: 2026-05-01-rename-protected-fields-design.md  2026-05-03-per-row-sync-design.md  (+2 more)
installation/: index.html
netbox_data_import/: __init__.py  engine.py  filters.py  forms.py  models.py  navigation.py  signals.py  tables.py  template_content.py  urls.py  views.py
netbox_data_import/api/: serializers.py  urls.py  views.py
netbox_data_import/migrations/: 0001_initial.py  0002_importjob.py  0003_remove_classrolemapping_unique_class_role_mapping_per_profile_and_more.py  0004_features.py  0005_deviceexistingmatch.py  0006_deviceexistingmatch_asset_tag.py  0007_manufacturermapping.py  0008_unique_constraints.py  0009_add_rack_type_to_classrolemapping.py  0010_alter_manufacturermapping_id.py  0011_importprofile_capture_extra_data.py  0012_classrolemapping_rack_type_related_name.py  0013_remove_columnmapping_unique_target.py  0014_alter_columnmapping_target_field_and_more.py
netbox_data_import/tests/: helpers.py  test_api.py  test_engine.py  test_engine_coverage2.py  test_engine_extended.py  test_engine_extra.py  test_misc_coverage.py  test_models.py  test_serial_display.py  test_views.py  test_views_coverage2.py  test_views_extra.py
search/: search_index.json
(+23 files in other folders)
