# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2025 Marcin Zieba <marcinpsk@gmail.com>
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-data-import"
version = "1.1.0"
description = "NetBox plugin for importing data from external DCIM systems"
readme = "README.md"
requires-python = ">=3.12.0"
license = "Apache-2.0"
authors = [
    {name = "Marcin Zieba"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
]
dependencies = [
    "openpyxl>=3.1",
    "pyyaml>=6",
]

[project.urls]
Homepage = "https://github.com/marcinpsk/netbox-data-import-plugin"
Repository = "https://github.com/marcinpsk/netbox-data-import-plugin"
Changelog = "https://github.com/marcinpsk/netbox-data-import-plugin/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["netbox_data_import*"]

[tool.setuptools.package-data]
netbox_data_import = ["templates/**/*.html", "tests/fixtures/*.xlsx"]

[dependency-groups]
dev = [
    "build",
    "reuse",
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-django",
    "python-semantic-release",
]
docs = [
    "mkdocs>=1,<2",
    "mkdocs-material>=9,<10",
]

[tool.pytest.ini_options]
pythonpath = ["/opt/netbox/netbox"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "D", "C901"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "F403",   # star imports
    "F405",   # may be undefined from star import
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D105",   # missing docstring in magic method
    "D106",   # missing docstring in public nested class (Django Meta, etc.)
    "D107",   # missing docstring in __init__
    "D203",   # 1 blank line before class docstring (conflicts with D211)
    "D213",   # multi-line summary second line (conflicts with D212)
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*/migrations/*.py" = ["D"]
"*/tests/*.py" = ["D"]
".devcontainer/**" = ["D"]
".devcontainer/scripts/test-e2e.py" = ["C901"]
".devcontainer/scripts/test-e2e-preview.py" = ["C901"]
".devcontainer/scripts/load-sample-data.py" = ["C901"]

[tool.coverage.run]
source = ["netbox_data_import"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 98
show_missing = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["netbox_data_import/__init__.py:__version__"]
branch = "main"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
build_command = "python -m build"
upload_to_vcs_release = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = false
